my melzi configuration was added

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = melzi
 include_dir  = Marlin
 
 #
@@ -508,6 +508,7 @@ platform      = atmelavr
 extends       = common_avr8
 board         = sanguino_atmega1284p
 upload_speed  = 115200
+upload_port = /dev/cu.wchusbserial1420
 
 #
 # Melzi and clones (Zonestar Melzi2 with tuned flags)
